tests/baselines/reference/tsxElementResolution1.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(12,1): error TS2339: Property 'span' does not exist on type 'JSX.IntrinsicElements'.


==== file.tsx (2 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		div: any
    	}
    }
    
    // OK
    <div />;
    
    // Fail
    <span />;
    ~~~~~~~~
!!! error TS2339: Property 'span' does not exist on type 'JSX.IntrinsicElements'.